--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8" />
     <title>Code Contas</title>
+    <style type="text/css">
+        .pago{
+            color: green;
+        }
+        .nao-pago{
+            color: red;
+        }
+        .minha-classe{
+            background-color: burlywood;
+        }
+    </style>
 </head>
 <body id="app">
     <h1> {{title}} </h1>
@@ -31,8 +42,10 @@
                 <td> {{index + 1}} </td>
                 <td> {{o.data_due}} </td>
                 <td> {{o.name}} </td>
-                <td> {{o.value}} </td>
-                <td> {{o.done}} </td>
+                <td> {{o.value | currency 'R$ ' 2}} </td>
+                <td class="minha-classe" :class="{'pago': o.done, 'nao-pago': !o.done}"> 
+                    {{o.done | doneLabel}} 
+                </td>
                 <td>
                     <a href="#" @click.prevent="loadBill(o)">Editar</a>
                 </td>
@@ -47,7 +60,7 @@
             <br /><br />
             <label>Nome:</label>
             <select v-model="bill.name">
-                <option v-for="o in names" value="{{o}}"> {{o}} </option>
+                <option v-for="o in names" :value="o"> {{o}} </option>
             </select>
             <br /><br />
             <label>Valor:</label>
