--- a/index.html
+++ b/index.html
@@ -19,62 +19,7 @@
     </style>
 </head>
 <body id="app">
-    <h1> {{title}} </h1>
-    <h3 :class="{'nao-pago': status > 0, 'pago': status === 0, 'cinza': status === false}"> {{status | corContas}} </h3>
-    <nav>
-        <ul>
-            <li v-for="o in menus">
-                <a href="#" @click.prevent="showView(o.id);"> {{o.name}} </a>
-                </li>
-        </ul>
-    </nav>
-    <div v-if="activedView == 0">
-    <table border="1" cellpadding="10">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Vencimento</th>
-                <th>Nome</th>
-                <th>Valor</th>
-                <th>Paga?</th>
-                <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr v-for="(index,o) in bills">
-                <td> {{index + 1}} </td>
-                <td> {{o.data_due}} </td>
-                <td> {{o.name}} </td>
-                <td> {{o.value | currency 'R$ ' 2}} </td>
-                <td class="minha-classe" :class="{'pago': o.done, 'nao-pago': !o.done}"> 
-                    {{o.done | doneLabel}} 
-                </td>
-                <td>
-                    <a href="#" @click.prevent="loadBill(o)">Editar</a> <a href="#" @click.prevent='remover(index)'>Remover</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    </div>
-    <div v-if="activedView == 1">
-        <form name="form" @submit.prevent="submit">
-            <label>Vencimento:</label>
-            <input type="text" v-model="bill.data_due" />
-            <br /><br />
-            <label>Nome:</label>
-            <select v-model="bill.name">
-                <option v-for="o in names" :value="o"> {{o}} </option>
-            </select>
-            <br /><br />
-            <label>Valor:</label>
-            <input type="text" v-model="bill.value"/>
-            <br /><br />
-            <label> Paga</label>
-            <input type="checkbox" v-model="bill.done" />
-            <br /><br />
-            <input type="submit" value="Enviar"/>
-        </form>
-    </div>
+<app-component></app-component>
     <script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </body>
