Criando componente central de acesso a dados

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Code Contas</title>
 </head>
 <body id="app">
-<app-component></app-component>
+<main-component></main-component>
     <script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
     <script type="text/javascript" src="node_modules/vue-router/dist/vue-router.js"></script>
     <script type="text/javascript" src="filters.js"></script>
