listando contas a pagar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Code Contas</title>
 </head>
 <body id="app">
-<main-component></main-component>
+<bill-component></bill-component>
     <script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
+    <script type="text/javascript" src="node_modules/vue-resource/dist/vue-resource.js"></script>
+
     <script type="text/javascript" src="node_modules/vue-router/dist/vue-router.js"></script>
     <script type="text/javascript" src="filters.js"></script>
     <script type="text/javascript" src="dashboard.component.js"></script>
