--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="node_modules/vue-resource/dist/vue-resource.js"></script>
 
     <script type="text/javascript" src="node_modules/vue-router/dist/vue-router.js"></script>
+    <script type="text/javascript" src="resources.js"></script>
     <script type="text/javascript" src="filters.js"></script>
     <script type="text/javascript" src="dashboard.component.js"></script>
     <script type="text/javascript" src="bill.component.js"></script>
